# OOP

./: .gitignore  CMakeLists.txt  README.md
lab1/: box_cap.cpp  box_cap.h  main  main.cpp  test  test.cpp
lab1/src/: box_cap.cpp  main.cpp
lab1/tests/: test.cpp
lab2/: CmakeLists.txt  main  main.cpp  test  tests.txt
lab2/include/: money.h
lab2/src/: main.cpp  money.cpp
lab2/tests/: test.cpp
lab3/: 1.in  CmakeLists.txt  README.md  test
lab3/include/: figure.hpp  point.hpp  rectangle.hpp  rhombus.hpp  trapezoid.hpp
lab3/src/: main.cpp  point.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
lab3/tests/: test.cpp
lab4/: 2.in  CmakeLists.txt  test
lab4/include/: figure.hpp  point.hpp  rectangle.hpp  rhombus.hpp  trapezoid.hpp
lab4/src/: main.cpp
lab4/tests/: test.cpp
lab5/: CmakeLists.txt  test
lab5/include/: Allocator.hpp  DynamicArray.hpp  iterator.hpp
lab5/src/: main.cpp
lab5/tests/: test.cpp
lab6/include/: druid.hpp  elf.hpp  knight.hpp  npc.hpp
lab6/src/: druid.cpp  elf.cpp  knight.cpp  main.cpp
lab7/: test
